--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-student participation">
             <div class="portfolio-img"><img src="assets/img/Geological field work/FW-2.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>Student Participation 3</h4>
+              <h4>As the sun casts its golden glow on the landscape, these third-year students embark on a journey of discovery, skillfully crafting a route map that traces the footsteps of time through the timeless embrace of Precambrian-age rocks, unveiling the ancient whispers of our planet's geological history</h4>
               <p>Student Participation</p>
               <a href="assets/img/Geological field work/FW-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="student participation 3"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
@@ -438,7 +438,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-mountain landscape">
             <div class="portfolio-img"><img src="assets/img/Geological field work/FW-4.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>Mountain Landscape 2</h4>
+              <h4>Folded rocks from Jurassic age observed near by Kagbeni</h4>
               <p>Mountain Landscape</p>
               <a href="assets/img/Geological field work/FW-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 2"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
@@ -448,7 +448,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-student participation">
             <div class="portfolio-img"><img src="assets/img/Geological field work/FW-5.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>Student Participation 2</h4>
+              <h4>Under the open sky, students embark on a field expedition, their curious eyes tracing the contours of time through the layers of Tertiary-age beds, each one a chapter in Earth's captivating geological story</h4>
               <p>Student Participation</p>
               <a href="assets/img/Geological field work/FW-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="student participation 2"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
@@ -468,7 +468,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-mountain landscape">
             <div class="portfolio-img"><img src="assets/img/Geological field work/FW-7.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>Mountain Landscape 1</h4>
+              <h4>Sisne Himal observed from east Rukum district of Nepal</h4>
               <p>Mountain Landscape</p>
               <a href="assets/img/Geological field work/FW-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 1"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
@@ -478,7 +478,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-mountain landscape">
             <div class="portfolio-img"><img src="assets/img/Geological field work/FW-8.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>Mountain Landscape 3</h4>
+              <h4>In the heart of the Himalayas, where every step is a picture-perfect moment (Mardi Himal, 5,587 metre/18,330 ft)</h4>
               <p>Mountain Landscape</p>
               <a href="assets/img/Geological field work/FW-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 3"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
@@ -488,7 +488,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-student participation">
             <div class="portfolio-img"><img src="assets/img/Geological field work/FW-9.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>Student Participation 3</h4>
+              <h4>SAdventurous students on the hunt for stromatolites amid the rocky outcrops along Siddhartha Highway, Nepal - unraveling ancient secrets of Earth's history</h4>
               <p>Student Participation</p>
               <a href="assets/img/Geological field work/FW-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="student participation 3"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
