--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-img"><img src="assets/img/Geological field work/FW-1.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>1st and 2nd year learning basic geological field  concept</h4>
+              <h4>1st and 2nd year B.Sc. students learning basic geological field  concept (Background Annapurna Mountain Range)</h4>
               <p>App</p>
               <a href="assets/img/Geological field work/FW-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
@@ -458,7 +458,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-img"><img src="assets/img/Geological field work/FW-6.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>Embarking on a geological site visit with a professor Simon from Stanford University, USA </h4>
+              <h4>Embarking on a geological site visit with  professor Simon from Stanford University, USA along with Program Coordinator of Department of Geology, Durga Khatiwada and Seimologist Dr. Somnath Sapkota </h4>
               <p>App</p>
               <a href="assets/img/Geological field work/FW-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 3"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
@@ -488,7 +488,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-student participation">
             <div class="portfolio-img"><img src="assets/img/Geological field work/FW-9.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>SAdventurous students on the hunt for stromatolites amid the rocky outcrops along Siddhartha Highway, Nepal - unraveling ancient secrets of Earth's history</h4>
+              <h4>Adventurous students on the hunt for stromatolites amid the rocky outcrops along Siddhartha Highway, Nepal - unraveling ancient secrets of Earth's history</h4>
               <p>Student Participation</p>
               <a href="assets/img/Geological field work/FW-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="student participation 3"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
