--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-img"><img src="assets/img/Geological field work/FW-1.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>1st and 2nd year B.Sc. students learning basic geological field  concept (Background Annapurna Mountain Range)</h4>
+              <h4>1st and 2nd year B.Sc. students learning basic geological field  concept (Background: Annapurna Mountain Range)</h4>
               <p>App</p>
               <a href="assets/img/Geological field work/FW-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
@@ -428,7 +428,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-img"><img src="assets/img/Geological field work/FW-3.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>3rd year students being busy with geological field report preparation work</h4>
+              <h4>3rd year B.Sc. geology students being busy with geological field report preparation work</h4>
               <p>App</p>
               <a href="assets/img/Geological field work/FW-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 2"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
@@ -438,7 +438,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-mountain landscape">
             <div class="portfolio-img"><img src="assets/img/Geological field work/FW-4.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>Folded rocks from Jurassic age observed near by Kagbeni</h4>
+              <h4>Folded rocks from Jurassic age observed near by Kagbeni, Mustang</h4>
               <p>Mountain Landscape</p>
               <a href="assets/img/Geological field work/FW-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 2"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
