--- a/index.html
+++ b/index.html
@@ -593,7 +593,13 @@
         <div class="section-title">
           <span>Contact Me</span>
           <h2>Contact Me</h2>
-          <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
+          <p>Nawaraj Parajuli
+            Assistant Professor
+            Department of Geology
+            Prithvi Narayan Campus
+            Institute of Science and Technology (IoST)
+            Bagar, Pokhara
+            9841631110</p>
         </div>
 
         <div class="row">
@@ -618,14 +624,14 @@
                 <div class="info-box mt-4">
                   <i class="bx bx-envelope"></i>
                   <h3>Email Me</h3>
-                  <p>contact@example.com</p>
+                  <p>nawaraj.parajuli@prnc.tu.edu.np</p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="info-box mt-4">
                   <i class="bx bx-phone-call"></i>
                   <h3>Call Me</h3>
-                  <p>+1 5589 55488 55</p>
+                  <p>+977-9841631110</p>
                 </div>
               </div>
             </div>
