--- a/index.html
+++ b/index.html
@@ -593,13 +593,7 @@
         <div class="section-title">
           <span>Contact Me</span>
           <h2>Contact Me</h2>
-          <p>Nawaraj Parajuli
-            Assistant Professor
-            Department of Geology
-            Prithvi Narayan Campus
-            Institute of Science and Technology (IoST)
-            Bagar, Pokhara
-            9841631110</p>
+          <p>Nawaraj Parajuli Assistant Professor  Department of Geology  Prithvi Narayan Campus  Institute of Science and Technology (IoST), Tibhuvan University, Nepal </p>
         </div>
 
         <div class="row">
