--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-mountain landscape">
             <div class="portfolio-img"><img src="assets/img/Geological field work/FW-4.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>Folded rocks from Jurassic age observed near by Kagbeni, Mustang</h4>
+              <h4>In the captivating landscape near Kagbeni, Mustang, a geological treasure unfolds as folded rocks of Jurassic age gracefully reveal the ancient tales of our planet's tumultuous past</h4>
               <p>Mountain Landscape</p>
               <a href="assets/img/Geological field work/FW-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 2"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
