--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-img"><img src="assets/img/Geological field work/FW-1.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>1st and 2nd year B.Sc. students learning basic geological field  concept (Background: Annapurna Mountain Range)</h4>
+              <h4>Against the breathtaking backdrop of the Annapurna Mountain Range, the eager minds of first and second-year B.Sc. students embark on a transformative journey, where the timeless wisdom of geological field concepts unfolds amidst nature's grandeur, igniting a lifelong passion for understanding our planet's intricate tapestry</h4>
               <p>App</p>
               <a href="assets/img/Geological field work/FW-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
@@ -428,7 +428,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-img"><img src="assets/img/Geological field work/FW-3.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>3rd year B.Sc. geology students being busy with geological field report preparation work</h4>
+              <h4>Amidst the whispers of the natural world, third-year B.Sc. geology students immerse themselves in the art of scientific storytelling, weaving their experiences and insights into the intricate tapestry of a geological field report, capturing the essence of their journey through the Earth's ancient narrative</h4>
               <p>App</p>
               <a href="assets/img/Geological field work/FW-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 2"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
@@ -468,7 +468,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-mountain landscape">
             <div class="portfolio-img"><img src="assets/img/Geological field work/FW-7.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>Sisne Himal observed from east Rukum district of Nepal</h4>
+              <h4>Gazing eastward from the heart of Rukum district in Nepal, the majestic Sisne Himal stands as a sentinel of nature's artistry, its rugged peaks and ethereal beauty painting a mesmerizing portrait against the horizon</h4>
               <p>Mountain Landscape</p>
               <a href="assets/img/Geological field work/FW-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 1"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
