--- a/index.html
+++ b/index.html
@@ -186,20 +186,19 @@
         <div class="section-title">
           <span>My Resume</span>
           <h2>My Resume</h2>
-          <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
-        </div>
+                  </div>
 
         <div class="row">
           <div class="col-lg-6">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">EDUCATION:</h3>
             <div class="resume-item pb-0">
-              <h4>Alice Barkley</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <h4>M.Sc. in Geology from Central Department of Geology</h4>
+              <p><em>With a specialization in Engineering Geology</em></p>
               <p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>Tribhuvan University</li>
+                <li>Kathmandu</li>
+                <li>Nepal</li>
               </ul>
               </p>
             </div>
