--- a/index.html
+++ b/index.html
@@ -194,12 +194,8 @@
             <div class="resume-item pb-0">
               <h4>M.Sc. in Geology from Central Department of Geology</h4>
               <p><em>With a specialization in Engineering Geology</em></p>
+              <p><em>Tribhuvan University, Kathmandu, Nepal</em></p>
               <p>
-              <ul>
-                <li>Tribhuvan University</li>
-                <li>Kathmandu</li>
-                <li>Nepal</li>
-              </ul>
               </p>
             </div>
 
