--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <h3 class="resume-title">EDUCATION:</h3>
+            <h3 class="resume-title">Education:</h3>
             <div class="resume-item pb-0">
               <h4>M.Sc. in Geology from Central Department of Geology</h4>
               <p><em>With a specialization in Engineering Geology</em></p>
@@ -199,12 +199,14 @@
               </p>
             </div>
 
-            <h3 class="resume-title">Education</h3>
+            <h3 class="resume-title">Professional Experience:</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>Bachelor in Science</h4>
+              <h5>Assistant Professor
+                Department of Geology, Prithvi Narayan Campus
+                2018 - Present</h5>
+              <p><em>Teaching Responsibilities: Delivering instruction in various geology courses, including Structural Geology, Petrology, Stratigraphy, Geology of Nepal Himalaya, and Climate Change.</em></p>
+              <p>Laboratory and Fieldwork: Directing and supervising lab studies and fieldwork projects on an annual basis, providing students with practical hands-on experience in geological research and field exploration.</p>
             </div>
             <div class="resume-item">
               <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
