--- a/index.html
+++ b/index.html
@@ -209,10 +209,10 @@
               <p>Laboratory and Fieldwork: Directing and supervising lab studies and fieldwork projects on an annual basis, providing students with practical hands-on experience in geological research and field exploration.</p>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>Field Lecturer for summer students from USA in Nepal</h4>
+              <h5>2022-2023</h5>
+              <p><em>Geo-hazard in Pokhara Valley</em></p>
+              <p>Geological mapping along Kaligandaki River, western Nepal</p>
             </div>
           </div>
           <div class="col-lg-6">
