--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
               </p>
             </div>
 
-            <h3 class="resume-title">Professional Experience:</h3>
+            <h3 class="resume-title">Teaching Experience:</h3>
             <div class="resume-item">
               <h4>Bachelor in Science</h4>
               <h5>Assistant Professor
@@ -218,15 +218,16 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Engineering Geologist</h4>
+              <h5>November 18, 2019 - 2020</h5>
+              <p><em>Sanima Hydro and Engineering Pvt. Ltd </em></p>
               <p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Consult with the Contractor's Engineers on various engineering geological activities</li>
+                <li>Conduct Geological Mapping and Rock Class Classification to assess site conditions </li>
+                <li>Played a pivotal role in the design of Slope Stabilization measures.</li>
+                <li>Responsible for meticulously reviewing and signing bills for the Mathillo Mailung Khola Jalvidhyut Aayojana (14.3 MW) project, ensuring accurate financial documentation and adherence to project budgetary requirements.</li>
+                <li>Contribute to the Tunnel and Slope Support Design for the Mathillo Mailung Khola Jalvidhyut Aayojana (14.3 MW) project located in Rasuwa, Nepal.</li>
               </ul>
               </p>
             </div>
