--- a/index.html
+++ b/index.html
@@ -232,18 +232,37 @@
               </p>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
+              <h4>Geologist</h4>
               <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <p><em>PEES Consultant (P) Ltd.</em></p>
               <p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Geological Mapping and Mineral Exploration in Parts of Taplejung and Panchthar District.</li>
+                </ul>
+              </p>
+            </div>
+            <div class="resume-item">
+              <h4>Geologist</h4>
+              <h5>2018-2019</h5>
+              <p><em>IRDS and TAEC Consult P. Ltd.</em></p>
+              <p>
+              <ul>
+                <li>Geological Mapping for Mineral Exploration in Parts of Rukum, Rolpa, Jarjarkot, and Salyam Districts of Nepal </li>
+               
               </ul>
               </p>
             </div>
+            <div class="resume-item">
+              <h4>International Collaboration</h4>
+              <h5>(2018-2019) and present</h5>
+              <p><em>Landslide EVO Project (2018-2019) </em></p>
+              <p><em>Sajag Nepal Project (present)</em></p>
+              <p>
+              <ul>
+                <li>Detail Landslide Investigation in Baitadai, Far Western Nepal </li>
+                <li>Landslide investigation and early warning system development for landslide in different parts of Nepal</li>
+                  </ul>
+              </p>
           </div>
         </div>
 
