--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
               <p><em>Sajag Nepal Project (present)</em></p>
               <p>
               <ul>
-                <li>Detail Landslide Investigation in Baitadai, Far Western Nepal </li>
+                <li>Detail Landslide Investigation in Bajura and Baitadai, Far Western Nepal </li>
                 <li>Landslide investigation and early warning system development for landslide in different parts of Nepal</li>
                   </ul>
               </p>
