--- a/index.html
+++ b/index.html
@@ -613,7 +613,8 @@
         <div class="section-title">
           <span>Contact Me</span>
           <h2>Contact Me</h2>
-          <p>Nawaraj Parajuli</strong>Assistant Professor  Department of Geology  Prithvi Narayan Campus  Institute of Science and Technology (IoST), Tibhuvan University, Nepal </p>
+          <p>Nawaraj Parajuli</strong></p>
+          <p>Assistant Professor,  Department of Geology,  Prithvi Narayan Campus,  Institute of Science and Technology (IoST), Tibhuvan University, Nepal </p>
         </div>
 
         <div class="row">
