--- a/index.html
+++ b/index.html
@@ -192,12 +192,21 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Education:</h3>
             <div class="resume-item pb-0">
-              <h4>M.Sc. in Geology from Central Department of Geology</h4>
-              <p><em>With a specialization in Engineering Geology</em></p>
-              <p><em>Tribhuvan University, Kathmandu, Nepal</em></p>
-              <p>
-              </p>
+              <h4>Nepal Geological Society(NGS)- (Life Member)</h4>
+              <h5>International Association for Engineering Geology and the Environment(IAEG)-(Member)</h5>
+              
             </div>
+            
+            <div class="row">
+              <div class="col-lg-6">
+                <h3 class="resume-title">professional Membership:</h3>
+                <div class="resume-item pb-0">
+                  <h4>M.Sc. in Geology from Central Department of Geology</h4>
+                  <p><em>With a specialization in Engineering Geology</em></p>
+                  <p><em>Tribhuvan University, Kathmandu, Nepal</em></p>
+                  <p>
+                  </p>
+                </div>
 
             <h3 class="resume-title">Teaching Experience:</h3>
             <div class="resume-item">
