--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Nawaraj Parajuli</h3>
+      <h3>Nawaraj Parajuli, Assistant Professor of Geology</h3>
       <p>With great knowledge comes great responsibilty</p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
