--- a/index.html
+++ b/index.html
@@ -166,6 +166,13 @@
               </div>
 
               <div class="progress">
+                <span class="skill">Other Geological Software such as Dips, Scoops, FLOW2D, MATLAB, AutoCAD <i class="val">50%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div>
+
+              <div class="progress">
                 <span class="skill">HTML <i class="val">25%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
