--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
            
             <div class="row">
               <div class="col-lg-6">
-                <h3 class="resume-title">professional Membership:</h3>
+                <h3 class="resume-title">Education:</h3>
                 <div class="resume-item pb-0">
                   <h4>M.Sc. in Geology from Central Department of Geology</h4>
                   <p><em>With a specialization in Engineering Geology</em></p>
