--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             </div>
           </div>
           <div class="col-lg-6">
-            <h3 class="resume-title">Professional Experience</h3>
+            <h3 class="resume-title">Professional Experience:</h3>
             <div class="resume-item">
               <h4>Engineering Geologist</h4>
               <h5>November 18, 2019 - 2020</h5>
@@ -263,7 +263,7 @@
               </p>
             </div>
             <div class="resume-item">
-              <h4>International Collaboration</h4>
+              <h4>International Collaboration:</h4>
               <h5>(2018-2019) and present</h5>
               <p><em>Landslide EVO Project (2018-2019) </em></p>
               <p><em>Sajag Nepal Project (present)</em></p>
