--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             </div>
             <div class="resume-item">
               <h4>International Collaboration:</h4>
-              <h5>(2018-2019) and present</h5>
+              <h5>Research Associate</h5>
               <p><em>Landslide EVO Project (2018-2019) </em></p>
               <p><em>Sajag Nepal Project (present)</em></p>
               <p>
