--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/Tribhuvan University.png" rel="icon">
   <link href="assets/img/Tribhuvan University.png" rel="Tribhuvan University">
 
   <!-- Google Fonts -->
