--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
         <li><a class="nav-link scrollto " href="#geological field work">Geological Field Work</a></li>
         <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
-            <li><a href="#">Drop Down 1</a></li>
+            <li><a href="#">Materials for Students</a></li>
             <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
               <ul>
-                <li><a href="#">Deep Drop Down 1</a></li>
-                <li><a href="#">Deep Drop Down 2</a></li>
-                <li><a href="#">Deep Drop Down 3</a></li>
-                <li><a href="#">Deep Drop Down 4</a></li>
-                <li><a href="#">Deep Drop Down 5</a></li>
+                <li><a href="#">Lecture Slides</a></li>
+                <li><a href="#">Website Links</a></li>
+                <li><a href="#">Youtube Links</a></li>
+                <li><a href="#">Research Materials</a></li>
+                <li><a href="#">Notices</a></li>
               </ul>
             </li>
             <li><a href="#">Drop Down 2</a></li>
