--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <li><a class="nav-link scrollto" href="#resume">Resume</a></li>
         <li><a class="nav-link scrollto" href="#teaching">Teaching</a></li>
         <li><a class="nav-link scrollto " href="#geological field work">Geological Field Work</a></li>
-        <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+        <li class="dropdown"><a href="#"><span>Materials for Students</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
             <li><a href="#">Materials for Students</a></li>
             <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
