--- a/index.html
+++ b/index.html
@@ -50,17 +50,17 @@
         <li class="dropdown"><a href="#"><span>Materials for Students</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
             <li><a href="#">Lecture Slides</a></li>
-            <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
+            <li class="dropdown"><a href="#"><span>Lecture Slides</span> <i class="bi bi-chevron-right"></i></a>
               <ul>
-                <li><a href="#">Research Materials</a></li>
-                <li><a href="#">Website Links</a></li>
-                <li><a href="#">Youtube Links</a></li>
-                <li><a href="#">Research Materials</a></li>
+                <li><a href="#">B.Sc. 1st Year</a></li>
+                <li><a href="#">B.Sc. 2nd Year</a></li>
+                <li><a href="#">B.Sc. 3rd Year</a></li>
+                <li><a href="#">B.Sc. 4th Year</a></li>
                 </ul>
             </li>
-            <li><a href="#">Drop Down 2</a></li>
-            <li><a href="#">Drop Down 3</a></li>
-            <li><a href="#">Drop Down 4</a></li>
+            <li><a href="#">Research Materials</a></li>
+            <li><a href="#">Website Links</a></li>
+            <li><a href="#">Youtube Links</a></li>
           </ul>
         </li>
         <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
