--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <li><a class="nav-link scrollto " href="#geological field work">Geological Field Work</a></li>
         <li class="dropdown"><a href="#"><span>Materials for Students</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
-            <li><a href="#">Lecture Slides</a></li>
+            <li><a href="#">Report Guidelines</a></li>
             <li class="dropdown"><a href="#"><span>Lecture Slides</span> <i class="bi bi-chevron-right"></i></a>
               <ul>
                 <li><a href="#">B.Sc. 1st Year</a></li>
