--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
             <li><a href="#">Research Materials</a></li>
             <li><a href="#">Website Links</a></li>
             <li><a href="#">Youtube Links</a></li>
+            <li><a href="https://youtu.be/FYfuI2uZLmg">Youtube Links</a></li>
+
           </ul>
         </li>
         <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
