--- a/index.html
+++ b/index.html
@@ -61,8 +61,13 @@
             <li><a href="#">Research Materials</a></li>
             <li><a href="#">Website Links</a></li>
             <li><a href="#">Youtube Links</a></li>
-            <li><a href="https://youtu.be/FYfuI2uZLmg">Youtube Links</a></li>
-
+            <li class="dropdown"><a href="#"><span>Youtube Links</span> <i class="bi bi-chevron-right"></i></a>
+              <ul>
+                <li><a href="https://youtu.be/FYfuI2uZLmg">Youtube Links</a></li>
+                <li><a href="#">B.Sc. 2nd Year</a></li>
+                <li><a href="#">B.Sc. 3rd Year</a></li>
+                <li><a href="#">B.Sc. 4th Year</a></li>
+       
           </ul>
         </li>
         <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
