--- a/index.html
+++ b/index.html
@@ -60,7 +60,12 @@
             </li>
             <li><a href="#">Research Materials</a></li>
             <li><a href="#">Website Links</a></li>
-            <li><a href="#">Youtube Links</a></li>
+            <li class="dropdown"><a href="#"><span>Youtube Links</span> <i class="bi bi-chevron-right"></i></a>
+              <ul>
+                <li><a href="https://youtu.be/FYfuI2uZLmg">Youtube Links</a></li>
+                <li><a href="https://youtu.be/fiMemypKqEI?list=PLHyuArGIIyyR_2mObwQ3yng18LDnDqidp">Youtube Links</a></li>
+                <li><a href="https://youtu.be/nmAVtQ7MU4Y?list=LL">Youtube Links</a></li>
+                <li><a href="#">B.Sc. 4th Year</a></li>
           </ul>
         </li>
         <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
