--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
             <li><a href="#">Website Links</a></li>
             <li class="dropdown"><a href="#"><span>Youtube Links</span> <i class="bi bi-chevron-right"></i></a>
               <ul>
-                <li><a href="https://youtu.be/FYfuI2uZLmg">Youtube Links</a></li>
-                <li><a href="https://youtu.be/fiMemypKqEI?list=PLHyuArGIIyyR_2mObwQ3yng18LDnDqidp">Youtube Links</a></li>
-                <li><a href="https://youtu.be/nmAVtQ7MU4Y?list=LL">Youtube Links</a></li>
-                <li><a href="https://youtu.be/Z3IDnEOUIWM">Youtube Links</a></li>
+                <li><a href="https://youtu.be/FYfuI2uZLmg">BBC Men of Rock</a></li>
+                <li><a href="https://youtu.be/fiMemypKqEI?list=PLHyuArGIIyyR_2mObwQ3yng18LDnDqidp">Structural Geology</a></li>
+                <li><a href="https://youtu.be/nmAVtQ7MU4Y?list=LL">Mining Cycle</a></li>
+                <li><a href="https://youtu.be/Z3IDnEOUIWM">Mineral from Rock-Diamond Mining</a></li>
           </ul>
         </li>
         <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
