--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
             </li>
             <li><a href="#">Research Materials</a></li>
             <li><a href="#">Website Links</a></li>
+            <li class="dropdown"><a href="#"><span>Website Links</span> <i class="bi bi-chevron-right"></i></a>
+              <ul>
+                <li><a href="https://youtu.be/FYfuI2uZLmg">BBC Men of Rock</a></li>
+                <li><a href="https://youtu.be/fiMemypKqEI?list=PLHyuArGIIyyR_2mObwQ3yng18LDnDqidp">Structural Geology</a></li>
+                <li><a href="https://youtu.be/nmAVtQ7MU4Y?list=LL">Mining Cycle</a></li>
+                <li><a href="https://youtu.be/Z3IDnEOUIWM">Mineral from Rock-Diamond Mining</a></li>
             <li class="dropdown"><a href="#"><span>Youtube Links</span> <i class="bi bi-chevron-right"></i></a>
               <ul>
                 <li><a href="https://youtu.be/FYfuI2uZLmg">BBC Men of Rock</a></li>
