--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-      <h1>Nawaraj Parajuli Assistant Professor
-                Tribhuvan University </h1>
-      <h2> Geologist</h2>
+      <h1>Nawaraj Parajuli Assistant Professor</h1>
+      <h2>Department of Geology </h2>
+      <h2> Tribhuvan University</h2>
       <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
     </div>
   </section><!-- End Hero -->
