--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                   <div class="count-box">
                     <i class="bi bi-award" style="color: #ffb459;"></i>
                     <span data-purecounter-start="0" data-purecounter-end="4" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>International Colaboration</strong> Landslide Mapping and Field Lecturer for testimonial</p>
+                    <p><strong>International Colaboration</strong> Landslide Mapping and Field Lecturer for International students during geological field work along Kaligandaki River</p>
                   </div>
                 </div>
               </div>
