--- a/index.html
+++ b/index.html
@@ -217,9 +217,9 @@
               <div class="col-lg-6">
                 <h3 class="resume-title">Education:</h3>
                 <div class="resume-item pb-0">
-                  <h4>M.Sc. in Geology from Central Department of Geology</h4>
-                  <p><em>With a specialization in Engineering Geology</em></p>
-                  <p><em>Tribhuvan University, Kathmandu, Nepal</em></p>
+                  <h4>M.Sc. in Geology</h4>
+                  <h>With a specialization in Engineering Geology</em></p>
+                  <h5>Central Department of Geology, Tribhuvan University, Kathmandu, Nepal</h5>
                   <p>
                   </p>
                 </div>
