--- a/index.html
+++ b/index.html
@@ -218,9 +218,9 @@
                 <h3 class="resume-title">Education:</h3>
                 <div class="resume-item pb-0">
                   <h4>M.Sc. in Geology</h4>
-                  <h>With a specialization in Engineering Geology</em></p>
+                  <h>(With a specialization in Engineering Geology)</em></p>
                   <h5>Central Department of Geology, Tribhuvan University, Kathmandu, Nepal</h5>
-                  <p>
+                  <p>M.Sc. Thesis on "Stratigraphy and Structure of Tectonic Window and Adjoining Area in Panchthar and Taplejung Districts of Eastern Nepal."
                   </p>
                 </div>
 
