--- a/index.html
+++ b/index.html
@@ -226,9 +226,9 @@
 
             <h3 class="resume-title">Teaching Experience:</h3>
             <div class="resume-item">
-              <h4>Bachelor in Science</h4>
-              <h5>Assistant Professor
-                Department of Geology, Prithvi Narayan Campus
+              <h4>Assistant Professor
+                </h4>
+              <h5>Bachelor in Science, Department of Geology, Prithvi Narayan Campus
                 2020 - Present</h5>
               <p><em>Teaching Responsibilities: Delivering instruction in various geology courses, including Structural Geology, Petrology, Stratigraphy, Geology of Nepal Himalaya, and Climate Change.</em></p>
               <p>Laboratory and Fieldwork: Directing and supervising lab studies and fieldwork projects on an annual basis, providing students with practical hands-on experience in geological research and field exploration.</p>
