--- a/index.html
+++ b/index.html
@@ -226,8 +226,7 @@
 
             <h3 class="resume-title">Teaching Experience:</h3>
             <div class="resume-item">
-              <h4>Assistant Professor
-                </h4>
+              <h4>Assistant Professor</h4>
               <h5>Bachelor in Science, Department of Geology, Prithvi Narayan Campus
                 2020 - Present</h5>
               <p><em>Teaching Responsibilities: Delivering instruction in various geology courses, including Structural Geology, Petrology, Stratigraphy, Geology of Nepal Himalaya, and Climate Change.</em></p>
@@ -237,8 +236,8 @@
             
             </div>
             <div class="resume-item">
-              <h4>Field Lecturer for summer students from USA in Nepal</h4>
-              <h5>2022-2023</h5>
+              <h4>Summer Program</h4>
+              <h5>Field Lecturer, 2022-2023</h5>
               <p><em>Geo-hazard in Pokhara Valley</em></p>
               <p>Geological mapping along Kaligandaki River, western Nepal</p>
             </div>
