--- a/index.html
+++ b/index.html
@@ -236,10 +236,14 @@
             
             </div>
             <div class="resume-item">
-              <h4>Summer Program</h4>
-              <h5>Field Lecturer, 2022-2023</h5>
-              <p><em>Geo-hazard in Pokhara Valley</em></p>
-              <p>Geological mapping along Kaligandaki River, western Nepal</p>
+              <h4>Field Lecturer</h4>
+              <h5>Summer Program, 2022-2023</h5>
+              <p>
+                <ul>
+                <li>Geo-hazard in Pokhara Valley</li>
+                <li>Geological mapping along Kaligandaki River, western Nepal</li>
+              </ul>
+              </p>
             </div>
           </div>
           <div class="col-lg-6">
