--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             </div>
             <div class="resume-item">
               <h4>Field Lecturer</h4>
-              <h5>Summer Program, 2022-2023</h5>
+              <h5>Summer Program,SIT Study Abroad: GeoScience in Himalayas, 2022-2023</h5>
               <p>
                 <ul>
                 <li>Geo-hazard in Pokhara Valley</li>
