--- a/index.html
+++ b/index.html
@@ -229,11 +229,14 @@
               <h4>Assistant Professor</h4>
               <h5>Bachelor in Science, Department of Geology, Prithvi Narayan Campus
                 2020 - Present</h5>
-              <p><em>Teaching Responsibilities: Delivering instruction in various geology courses, including Structural Geology, Petrology, Stratigraphy, Geology of Nepal Himalaya, and Climate Change.</em></p>
-              <p>Laboratory and Fieldwork: Directing and supervising lab studies and fieldwork projects on an annual basis, providing students with practical hands-on experience in geological research and field exploration.</p>
-              <p>15 days field work for B.Sc. Geology 3rd year students in Malekhu section of Dadhing district of Nepal in each year.</p>
-              <p>28 days field work for B.Sc. Geology 4th year along Siddhartha Highway of Nepal in each year covering geological mapping, enigneering geology, mining geology and hydrogeology.</p>
-            
+                <p>
+                  <ul>
+              <li>Teaching Responsibilities: Delivering instruction in various geology courses, including Structural Geology, Petrology, Stratigraphy, Geology of Nepal Himalaya, and Climate Change.</li>
+              <li>Laboratory and Fieldwork: Directing and supervising lab studies and fieldwork projects on an annual basis, providing students with practical hands-on experience in geological research and field exploration.</li>
+              <li>15 days field work for B.Sc. Geology 3rd year students in Malekhu section of Dadhing district of Nepal in each year.</li>
+              <li>28 days field work for B.Sc. Geology 4th year along Siddhartha Highway of Nepal in each year covering geological mapping, enigneering geology, mining geology and hydrogeology.</li>
+              </ul>
+            </p>
             </div>
             <div class="resume-item">
               <h4>Field Lecturer</h4>
