--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             </div>
             <div class="resume-item">
               <h4>Field Lecturer</h4>
-              <h5>Summer Program,SIT Study Abroad: GeoScience in Himalayas, 2022-2023</h5>
+              <h5>Summer Program, SIT Study Abroad: GeoScience in Himalayas, 2022-2023</h5>
               <p>
                 <ul>
                 <li>Geo-hazard in Pokhara Valley</li>
@@ -253,8 +253,8 @@
             <h3 class="resume-title">Professional Experience:</h3>
             <div class="resume-item">
               <h4>Engineering Geologist</h4>
-              <h5>November 18, 2019 - 2020</h5>
-              <p><em>Sanima Hydro and Engineering Pvt. Ltd </em></p>
+              <h5>Sanima Hydro and Engineering Pvt. Ltd, 2019 - 2020</h5>
+              <p><em> </em></p>
               <p>
               <ul>
                 <li>Consult with the Contractor's Engineers on various engineering geological activities</li>
@@ -267,8 +267,8 @@
             </div>
             <div class="resume-item">
               <h4>Geologist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>PEES Consultant (P) Ltd.</em></p>
+              <h5>PEES Consultant (P) Ltd., 2017 - 2018</h5>
+              <p><em></em></p>
               <p>
               <ul>
                 <li>Geological Mapping and Mineral Exploration in Parts of Taplejung and Panchthar District.</li>
@@ -277,8 +277,8 @@
             </div>
             <div class="resume-item">
               <h4>Geologist</h4>
-              <h5>2018-2019</h5>
-              <p><em>IRDS and TAEC Consult P. Ltd.</em></p>
+              <h5>IRDS and TAEC Consult P. Ltd.,2018-2019</h5>
+              <p><em></em></p>
               <p>
               <ul>
                 <li>Geological Mapping for Mineral Exploration in Parts of Rukum, Rolpa, Jarjarkot, and Salyam Districts of Nepal </li>
