--- a/index.html
+++ b/index.html
@@ -286,7 +286,11 @@
               </ul>
               </p>
             </div>
-            <div class="resume-item">
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <h3 class="resume-title">Professional Experience:</h3>
+          <div class="resume-item">
               <h4>International Collaboration:</h4>
               <h5>Research Associate</h5>
               <p><em>Landslide EVO Project (2018-2019) </em></p>
