--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
             </div>
             <div class="resume-item">
               <h4>Geologist</h4>
-              <h5>IRDS and TAEC Consult P. Ltd.,2018-2019</h5>
+              <h5>IRDS and TAEC Consult P. Ltd., 2018-2019</h5>
               <p><em></em></p>
               <p>
               <ul>
@@ -289,16 +289,22 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <h3 class="resume-title">Professional Experience:</h3>
+          <h3 class="resume-title">International Collaboration:</h3>
           <div class="resume-item">
-              <h4>International Collaboration:</h4>
-              <h5>Research Associate</h5>
-              <p><em>Landslide EVO Project (2018-2019) </em></p>
-              <p><em>Sajag Nepal Project (present)</em></p>
+              <h4>Research Associate</h4>
+              <h5>Landslide EVO Project, 2018-2019</h5>
+              <p><em> </em></p>
+              <p>
+                <ul>
+                  <li>Detail Landslide Investigation in Bajura and Baitadai, Far Western Nepal </li>
+                  
+                    </ul>
+           <div class="resume-item"></div>
+           <h4>Research Associate</h4>
+              <h5>Sajag Nepal Project, 2022- Present</h5>
               <p>
               <ul>
-                <li>Detail Landslide Investigation in Bajura and Baitadai, Far Western Nepal </li>
-                <li>Landslide investigation and early warning system development for landslide in different parts of Nepal</li>
+                  <li>Landslide investigation and early warning system development for landslide in different parts of Nepal</li>
                   </ul>
               </p>
           </div>
