--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                   <li>Detail Landslide Investigation in Bajura and Baitadai, Far Western Nepal </li>
             </ul>
           </p>
-
+        </div>
            <div class="resume-item"></div>
            <h4>Research Associate</h4>
               <h5>Sajag Nepal Project, 2022- Present</h5>
