--- a/index.html
+++ b/index.html
@@ -291,7 +291,27 @@
         <div class="col-lg-6">
           <h3 class="resume-title">International Collaboration:</h3>
           <div class="resume-item">
+            <div class="resume-item">
               <h4>Research Associate</h4>
+              <h5>Sajag Nepal Project, 2022- Present</h5>
+              <p><em> </em></p>
+              <p>
+              <ul>
+                <li>Landslide investigation and early warning system development for landslide in different parts of Nepal.</li>
+             </ul>
+              </p>
+            </div>
+            <div class="resume-item">
+              <h4>Research Associate</h4>
+              <h5>Landslide EVO Project, 2018-2019</h5>
+              <p><em></em></p>
+              <p>
+              <ul>
+                <li>Detail Landslide Investigation in Bajura and Baitadai, Far Western Nepal.</li>
+                </ul>
+              </p>
+            </div>  
+            <h4>Research Associate</h4>
               <h5>Landslide EVO Project, 2018-2019</h5>
               <p><em> </em></p>
               <p>
@@ -300,16 +320,7 @@
             </ul>
           </p>
         </div>
-           <div class="resume-item"></div>
-           <h4>Research Associate</h4>
-              <h5>Sajag Nepal Project, 2022- Present</h5>
-              <p>
-              <ul>
-                  <li>Landslide investigation and early warning system development for landslide in different parts of Nepal</li>
-                  </ul>
-              </p>
-          </div>
-        </div>
+       </div>
 
       </div>
     </section><!-- End My Resume Section -->
