--- a/index.html
+++ b/index.html
@@ -316,13 +316,13 @@
               <p><em> </em></p>
               <p>
                 <ul>
-                  <li>Detail Landslide Investigation in Bajura and Baitadai, Far Western Nepal </li>
+                  <li>Detail Landslide Investigation in Bajura and Baitadai, Far Western Nepal.</li>
             </ul>
           </p>
         </div>
        </div>
-
       </div>
+      
     </section><!-- End My Resume Section -->
 
     <!-- ======= My Services Section ======= -->
