--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-img"><img src="assets/img/Geological field work/FW-6.jpg" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
-              <h4>Embarking on a geological site visit with  professor Simon from Stanford University, USA along with Program Coordinator of Department of Geology, Assistant Professor Durga Khatiwada and Seimologist Dr. Somnath Sapkota </h4>
+              <h4>Embarking on a geological site visit with  professor Dr. Simon Klemperer from Stanford University, USA along with Program Coordinator of Department of Geology, Assistant Professor Durga Khatiwada and Earthquake Geologist Dr. Soma Nath Sapkota </h4>
               <p>App</p>
               <a href="assets/img/Geological field work/FW-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 3"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
