--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
               <p><em> </em></p>
               <p>
               <ul>
-                <li>Landslide investigation and early warning system development for landslide in different parts of Nepal.</li>
+                <li>Landslide investigation in different parts of Nepal and early warning system development for landslide.</li>
              </ul>
               </p>
             </div>
