--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
             </li>
             <li class="dropdown"><a href="#"><span>Research Materials</span> <i class="bi bi-chevron-right"></i></a>
               <ul>
-                <li><a href="https://youtu.be/FYfuI2uZLmg">BBC Men of Rock</a></li>
-                <li><a href="https://youtu.be/fiMemypKqEI?list=PLHyuArGIIyyR_2mObwQ3yng18LDnDqidp">Structural Geology</a></li>
+                <li><a href="https://dmgnepal.gov.np/en">Department of Mines and Geology</a></li>
+                <li><a href="https://www.nepjol.info/index.php/BDG/index">Bulletin of the Department of Geology</a></li>
                 <li><a href="https://youtu.be/nmAVtQ7MU4Y?list=LL">Mining Cycle</a></li>
                 <li><a href="https://youtu.be/Z3IDnEOUIWM">Mineral from Rock-Diamond Mining</a></li>
               </ul>
@@ -110,7 +110,7 @@
           <h2>About Me</h2>
           <p>I am Nawaraj Parajuli, presently holding the position of Assistant Professor
             in the Department of Geology at Prithivi Narayan Campus, Tribhuvan University.
-          This student participationsite has been established as a central platform to showcase my academic
+          This student participation site has been established as a central platform to showcase my academic
             and research pursuits. To navigate through the various sections of this student participationsite, 
             you may conveniently utilize the navigation tabs located above.  
             My professional expertise primarily encompasses the domains of structural and 
