--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
               <ul>
                 <li><a href="https://dmgnepal.gov.np/en">Department of Mines and Geology</a></li>
                 <li><a href="https://www.nepjol.info/index.php/BDG/index">Bulletin of the Department of Geology</a></li>
-                <li><a href="https://youtu.be/nmAVtQ7MU4Y?list=LL">Mining Cycle</a></li>
-                <li><a href="https://youtu.be/Z3IDnEOUIWM">Mineral from Rock-Diamond Mining</a></li>
+                <li><a href="https://www.usgs.gov/products/publications">USGS</a></li>
+                <li><a href="https://pubs.geoscienceworld.org/geology/issue/51/10">Geoscience World</a></li>
               </ul>
             </li>
                 <li class="dropdown"><a href="#"><span>Website Links</span> <i class="bi bi-chevron-right"></i></a>
@@ -78,6 +78,7 @@
                 <li><a href="https://youtu.be/FYfuI2uZLmg">BBC Men of Rock</a></li>
                 <li><a href="https://youtu.be/fiMemypKqEI?list=PLHyuArGIIyyR_2mObwQ3yng18LDnDqidp">Structural Geology</a></li>
                 <li><a href="https://youtu.be/nmAVtQ7MU4Y?list=LL">Mining Cycle</a></li>
+                <li><a href="https://youtu.be/emEq6x5_dpc?t=200">Gaint Crsytal Cave</a></li>
                 <li><a href="https://youtu.be/Z3IDnEOUIWM">Mineral from Rock-Diamond Mining</a></li>
           </ul>
         </ul>
