--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
                 <li><a href="https://www.nepjol.info/index.php/BDG/index">Bulletin of the Department of Geology</a></li>
                 <li><a href="https://www.usgs.gov/products/publications">USGS</a></li>
                 <li><a href="https://pubs.geoscienceworld.org/geology/issue/51/10">Geoscience World</a></li>
+                <li><a href="https://www.geosociety.org/">The Geological Society of America</a></li>
+                <li><a href="https://www.bgs.ac.uk/">British Geological Survey</a></li>
+                <li><a href="https://www.nepjol.info/index.php/JNGS/">Journal of Nepal Geological Society</a></li>
               </ul>
             </li>
                 <li class="dropdown"><a href="#"><span>Website Links</span> <i class="bi bi-chevron-right"></i></a>
