--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <li><a href="https://youtu.be/FYfuI2uZLmg">BBC Men of Rock</a></li>
                 <li><a href="https://youtu.be/fiMemypKqEI?list=PLHyuArGIIyyR_2mObwQ3yng18LDnDqidp">Structural Geology</a></li>
                 <li><a href="https://youtu.be/nmAVtQ7MU4Y?list=LL">Mining Cycle</a></li>
-                <li><a href="https://youtu.be/emEq6x5_dpc?t=200">Gaint Crsytal Cave</a></li>
+                <li><a href="https://youtu.be/emEq6x5_dpc?t=200">Gaint Crystal Cave</a></li>
                 <li><a href="https://youtu.be/Z3IDnEOUIWM">Mineral from Rock-Diamond Mining</a></li>
           </ul>
         </ul>
