--- a/index.html
+++ b/index.html
@@ -56,11 +56,10 @@
                 <li><a href="#">B.Sc. 2nd Year</a></li>
                 <li><a href="#">B.Sc. 3rd Year</a></li>
                 <li><a href="#">B.Sc. 4th Year</a></li>
-                <li class="dropdown"><a href="#"><span>Lecture Slides</span> <i class="bi bi-chevron-right"></i></a>
-                 <li><a href="#">B.Sc. 4th Year Lecture Slides</a></li>
+                <li><a href="#">B.Sc. 4th Year Lecture Slides</a></li>
                     <!-- Add the Google Drive link here -->
-                    <li><a href="https://drive.google.com/drive/folders/1_aHY_x19PxzHTVXqdyBZtyrmQA-9CviH?usp=sharing" target="_blank">B.Sc. 1st Year Lecture Slides (Google Drive)</a></li>         
-                </ul>
+                    <li><a href="https://docs.google.com/forms/d/1lwcccBFjfGoJuXjBmy9lXmoxBe71MMXgZJaF2AVWjGo/edit" target="_blank">B.Sc. 1st Year Lecture Slides (Google Drive)</a></li>         
+                
             </li>
             <li class="dropdown"><a href="#"><span>Research Materials</span> <i class="bi bi-chevron-right"></i></a>
               <ul>
