--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <li><a href="#">B.Sc. 3rd Year</a></li>
                 <li><a href="#">B.Sc. 4th Year Lecture Slides</a></li>
                     <!-- Add the Google Drive link here -->
-                    <li><a href="https://docs.google.com/forms/d/1lwcccBFjfGoJuXjBmy9lXmoxBe71MMXgZJaF2AVWjGo/edit" target="_blank">B.Sc. 4th Year Lecture Slides (Google Drive)</a></li>         
+                    <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSekTVmj5Owciumhiemhg2WbuvklKqTXlNFj5zXMRUaQd_AK6A/viewform?fbzx=2172434579970926986" target="_blank">B.Sc. 4th Year Lecture Slides (Google Drive)</a></li>         
             <li class="dropdown"><a href="#"><span>Research Materials</span> <i class="bi bi-chevron-right"></i></a>
               <ul>
                 <li><a href="https://dmgnepal.gov.np/en">Department of Mines and Geology</a></li>
