--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <li><a href="#">B.Sc. 1st Year</a></li>
                 <li><a href="#">B.Sc. 2nd Year</a></li>
                 <li><a href="#">B.Sc. 3rd Year</a></li>
-                <li><a href="#">B.Sc. 4th Year</a></li>
+                <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSekTVmj5Owciumhiemhg2WbuvklKqTXlNFj5zXMRUaQd_AK6A/viewform" target="_blank">B.Sc. 4th Year (Google Drive)</a></li>
                 </ul>
             </li>
             <li class="dropdown"><a href="#"><span>Research Materials</span> <i class="bi bi-chevron-right"></i></a>
