--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <ul>
                 <li><a href="#">B.Sc. 1st Year</a></li>
                 <li><a href="#">B.Sc. 2nd Year</a></li>
-                <li><a href="https://https://docs.google.com/forms/d/e/1FAIpQLSdkV_x8e46zWVtXE4K8OoqDi8r3FRMzzak7hYaQvq5f1tfIlw/viewform" target="_blank">B.Sc. 3rd Year (Google Drive)</a></li>
+                <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdkV_x8e46zWVtXE4K8OoqDi8r3FRMzzak7hYaQvq5f1tfIlw/viewform" target="_blank">B.Sc. 3rd Year (Google Drive)</a></li>
                 <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSekTVmj5Owciumhiemhg2WbuvklKqTXlNFj5zXMRUaQd_AK6A/viewform" target="_blank">B.Sc. 4th Year (Google Drive)</a></li>
                 </ul>
             </li>
