--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                 <li><a href="https://viva.pressbooks.pub/petrology/chapter/2-7-properties-under-cross-polarized-light/?fbclid=IwAR363Wkg4425v0ckj7k3EgAxx55TkzWC5JGkynTyOS_7dw9FEFfFbTx3ltE">Properties Under Cross Polarized Light</a></li>
                 <li><a href="http://www.alexstrekeisen.it/english/pluto/index.php">Thin section</a></li>
                 <li><a href="https://opengeology.org/petrology/01-introduction-to-petrology/">Petrology</a></li>
+                <li><a href="https://www.geokniga.org/bookfiles/geokniga-igneousandmetamorphicpetrologybymyrongbestz-liborg.pdf">IGNEOUS AND METAMORPHIC PETROLOGY</a></li>
                 </ul>
             </li>
             <li class="dropdown"><a href="#"><span>Youtube Links</span> <i class="bi bi-chevron-right"></i></a>
