--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
                 <li><a href="http://www.alexstrekeisen.it/english/pluto/index.php">Thin section</a></li>
                 <li><a href="https://opengeology.org/petrology/01-introduction-to-petrology/">Petrology</a></li>
                 <li><a href="https://www.geokniga.org/bookfiles/geokniga-igneousandmetamorphicpetrologybymyrongbestz-liborg.pdf">IGNEOUS AND METAMORPHIC PETROLOGY</a></li>
-                </ul>
+                <li><a href="https://www.geokniga.org/bookfiles/geokniga-petrology-sedimentary-rocks_0.pdf">PETROLOGY OF SEDIMENTARY ROCKS</a></li>  
+              </ul>
             </li>
             <li class="dropdown"><a href="#"><span>Youtube Links</span> <i class="bi bi-chevron-right"></i></a>
               <ul>
